Android tweaks: Removed fancy info icon as not supported Padding fixed on small screens

--- a/src/main/resources/static/css/max-640px.css
+++ b/src/main/resources/static/css/max-640px.css
@@ -3,8 +3,15 @@
     --slider-height: 8px;
 }
 
-.topnav a {
+.menuitem {
+    padding: 8px 14px;
+}
+
+.topnav a:not(.menuitem) {
     padding: 10px 14px;
+}
+
+.topnav a {
     font-size: 11px;
 }
 
